chore: slight wording change

--- a/book/wezterm/font.html
+++ b/book/wezterm/font.html
@@ -191,8 +191,8 @@ special symbols are available even without requiring you to use a patched font.<
 <p><a class="admonition-anchor-link" href="#admonition-info"></a></p>
 </div>
 <div>
-<p><code>Nerd Font</code>いらないって言いながら<code>Nerd</code>なの❗️❓ってなっちゃうんですが、
-つい数分前にこの辺りのわたしの理解が間違っていたことに気づいたので、また改めて改編します...。</p>
+<p><code>Nerd Font</code>いらないって言いながら<code>Nerd</code>なの❗️❓ってなっちゃうんですが、なんかごめんなさい、色々ありました。</p>
+<p>取り急ぎ直したので内容は間違ってないと思います。...多分。</p>
 </div>
 </div>
 <h2 id="インストール"><a class="header" href="#インストール">インストール</a></h2>
