chore: modified tags

--- a/book/wezterm/dpi-detection.html
+++ b/book/wezterm/dpi-detection.html
@@ -194,7 +194,7 @@ When the event is emitted, each of the registered callbacks is called in the ord
 </div>
 </div>
 <h2 id="では実装"><a class="header" href="#では実装">では実装</a></h2>
-<p><code>event.lua</code>に新しく以下を追記します。</p>
+<p><code>event.lua</code>に追記していきます。</p>
 <div id="admonition-eventlua" class="admonition example">
 <div class="admonition-title">
 <p>event.lua</p>
