--- a/book/wezterm/toggle-font.html
+++ b/book/wezterm/toggle-font.html
@@ -163,10 +163,10 @@
 <p>だからなんだって言われるとキツイんですが、一番わかりやすいところでフォントサイズの問題があって、画面のスケールが違いすぎて 大きすぎたり小さすぎたりしてしまう...😢</p>
 <p><img src="img/img-4k.png" alt="img-4k" /></p>
 <p><img src="img/img-mbp.png" alt="img-mbp" /></p>
-<div id="admonition-note" class="admonition note">
+<div id="admonition-info" class="admonition info">
 <div class="admonition-title">
-<p>Note</p>
-<p><a class="admonition-anchor-link" href="#admonition-note"></a></p>
+<p>Info</p>
+<p><a class="admonition-anchor-link" href="#admonition-info"></a></p>
 </div>
 <div>
 <p>意図伝わりますでしょうか...。</p>
@@ -210,10 +210,10 @@ end)
 </div>
 </div>
 <p>これでフォントサイズの切り替えが実現できます。</p>
-<div id="admonition-info" class="admonition info">
+<div id="admonition-info-1" class="admonition info">
 <div class="admonition-title">
 <p>Info</p>
-<p><a class="admonition-anchor-link" href="#admonition-info"></a></p>
+<p><a class="admonition-anchor-link" href="#admonition-info-1"></a></p>
 </div>
 <div>
 <p>ごめんなさい。わたしは<code>wezterm.lua</code>での素の<code>font_size</code>を<code>14.0</code>にしています。各自で調整してください。</p>
@@ -243,10 +243,10 @@ end)
 </div>
 </div>
 <p>まあ、思いっきり手動なんですけどね。自動で出来たら面白いんですけどね。</p>
-<div id="admonition-info-1" class="admonition info">
+<div id="admonition-info-2" class="admonition info">
 <div class="admonition-title">
 <p>Info</p>
-<p><a class="admonition-anchor-link" href="#admonition-info-1"></a></p>
+<p><a class="admonition-anchor-link" href="#admonition-info-2"></a></p>
 </div>
 <div>
 <p>あれ？dpi取得できるなら自動で出来るのかな。このサイト作りながら気づいてしまった...。</p>
