--- a/book/print.html
+++ b/book/print.html
@@ -1693,7 +1693,7 @@ end)
 を使ってサイズを上下するのもいいんですが、ちょっとコレじゃない...。</p>
 <p>わたしはこれが結構ストレスになっていたので、 この問題の解消に有用なのが次のフォント切り替え機能です。</p>
 <h2 id="フォント切り替え"><a class="header" href="#フォント切り替え">フォント切り替え</a></h2>
-<p>この例では<code>ToggleFontSize</code>というイベントを独自に作っています。</p>
+<p>この例では<code>toggle-font-size</code>というイベントを独自に作っています。</p>
 <p>フォントサイズに限らず、元の設定を直接変えるのではなく、オーバーライドする形式になっています。</p>
 <div id="admonition-windowget_config_overrideshttpswezfurlongorgweztermconfigluawindowget_config_overrideshtml" class="admonition note">
 <div class="admonition-title">
@@ -1715,7 +1715,7 @@ end)
 <div>
 <pre><code class="language-lua">local wezterm = require 'wezterm'
 
-wezterm.on('ToggleFontSize', function(window, pane)
+wezterm.on('toggle-font-size', function(window, pane)
   local overrides = window:get_config_overrides() or {}
   overrides.font_size = not overrides.font_size and 10.0 or nil
 
@@ -1753,7 +1753,7 @@ end)
 <p><a class="admonition-anchor-link" href="wezterm/toggle-font.html#admonition-keybindslua"></a></p>
 </div>
 <div>
-<pre><code class="language-lua">  { key = 'f', mods = 'CTRL', action = act.EmitEvent 'ToggleFontSize' },
+<pre><code class="language-lua">  { key = 'f', mods = 'CTRL', action = act.EmitEvent 'toggle-font-size' },
 </code></pre>
 </div>
 </div>
@@ -1831,17 +1831,10 @@ When the event is emitted, each of the registered callbacks is called in the ord
 <p><a class="admonition-anchor-link" href="wezterm/dpi-detection.html#admonition-eventlua"></a></p>
 </div>
 <div>
-<pre><code class="language-lua">local DPI_CHANGE_NUM = 144
+<pre><code class="language-lua">local DPI_CHANGE_NUM = 140
 local DPI_CHANGE_FONT_SIZE = 10.0
 
 local prev_dpi = 0
-
-wezterm.on('ToggleDpi', function(window, pane)
-  local overrides = window:get_config_overrides() or {}
-  overrides.font_size = window.get_dimensitons().dpi == CHANGE_NUM and CHANGE_FONT_SIZE or nil
-
-  window:set_config_overrides(overrides)
-end)
 
 wezterm.on('update-status', function(window, pane)
   local dpi = window:get_dimensions().dpi
@@ -1850,23 +1843,26 @@ wezterm.on('update-status', function(window, pane)
     return
   end
 
-  wezterm.action.EmitEvent('ToggleDpi')
+  local overrides = window:get_config_overrides() or {}
+  overrides.font_size = dpi &gt;= DPI_CHANGE_NUM and DPI_CHANGE_FONT_SIZE or nil
+  window:set_config_overrides(overrides)
+
   prev_dpi = dpi
 end)
 </code></pre>
 </div>
 </div>
-<p><code>dpi</code>と<code>font_size</code>周りの値はわたしの環境で決め打ちにしちゃってるので適宜調整してください。</p>
-<p>動作としては、<code>dpi</code>に変更があったら<code>ToggleDpi</code>と名付けたカスタムイベントを呼び出すと言うものです。
-<code>ToggleDpi</code>の自体は手動でやっていた処理とほぼ同じですね。</p>
+<p><code>dpi</code>と<code>font_size</code>周りの値はわたしの環境でぼや〜っと決め打ちにしてるので適宜調整してください。</p>
+<p>動作としては、<code>dpi</code>に変更があったらフォントサイズを切り替えるというものです。
+手動でやっていた処理とほぼ同じですね。</p>
 <div id="admonition-info-1" class="admonition info">
 <div class="admonition-title">
 <p>Info</p>
 <p><a class="admonition-anchor-link" href="wezterm/dpi-detection.html#admonition-info-1"></a></p>
 </div>
 <div>
-<p>わざわざ<code>ToggleDpi</code>なんていうカスタムイベントいらなくない？と思われるかもしれませんが、
-やっぱり<code>update-status</code>の本来の意図とは違う使い方なので最小限で抜けたいんですよね〜。</p>
+<p>ほんとはカスタムイベントを使ってやりたいんですが、うまくいかない...。
+一旦これで。</p>
 </div>
 </div>
 <div id="admonition-success" class="admonition success">
