--- a/book/wezterm/toggle-font.html
+++ b/book/wezterm/toggle-font.html
@@ -178,7 +178,7 @@
 を使ってサイズを上下するのもいいんですが、ちょっとコレじゃない...。</p>
 <p>わたしはこれが結構ストレスになっていたので、 この問題の解消に有用なのが次のフォント切り替え機能です。</p>
 <h2 id="フォント切り替え"><a class="header" href="#フォント切り替え">フォント切り替え</a></h2>
-<p>この例では<code>ToggleFontSize</code>というイベントを独自に作っています。</p>
+<p>この例では<code>toggle-font-size</code>というイベントを独自に作っています。</p>
 <p>フォントサイズに限らず、元の設定を直接変えるのではなく、オーバーライドする形式になっています。</p>
 <div id="admonition-windowget_config_overrideshttpswezfurlongorgweztermconfigluawindowget_config_overrideshtml" class="admonition note">
 <div class="admonition-title">
@@ -200,7 +200,7 @@
 <div>
 <pre><code class="language-lua">local wezterm = require 'wezterm'
 
-wezterm.on('ToggleFontSize', function(window, pane)
+wezterm.on('toggle-font-size', function(window, pane)
   local overrides = window:get_config_overrides() or {}
   overrides.font_size = not overrides.font_size and 10.0 or nil
 
@@ -238,7 +238,7 @@ end)
 <p><a class="admonition-anchor-link" href="#admonition-keybindslua"></a></p>
 </div>
 <div>
-<pre><code class="language-lua">  { key = 'f', mods = 'CTRL', action = act.EmitEvent 'ToggleFontSize' },
+<pre><code class="language-lua">  { key = 'f', mods = 'CTRL', action = act.EmitEvent 'toggle-font-size' },
 </code></pre>
 </div>
 </div>
