correction of wording, etc.

--- a/book/print.html
+++ b/book/print.html
@@ -86,7 +86,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">WezTerm</li><li class="chapter-item expanded "><a href="wezterm/installation.html"><strong aria-hidden="true">2.</strong> installation</a></li><li class="chapter-item expanded "><a href="wezterm/base.html"><strong aria-hidden="true">3.</strong> Base Settings</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/window.html"><strong aria-hidden="true">3.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="wezterm/shell.html"><strong aria-hidden="true">3.2.</strong> Shell Prompt</a></li><li class="chapter-item expanded "><a href="wezterm/font.html"><strong aria-hidden="true">3.3.</strong> Font</a></li><li class="chapter-item expanded "><a href="wezterm/frame.html"><strong aria-hidden="true">3.4.</strong> Window Frame</a></li><li class="chapter-item expanded "><a href="wezterm/keybind.html"><strong aria-hidden="true">3.5.</strong> Key Binding</a></li><li class="chapter-item expanded "><a href="wezterm/leader.html"><strong aria-hidden="true">3.6.</strong> Leader Key</a></li></ol></li><li class="chapter-item expanded "><a href="wezterm/format.html"><strong aria-hidden="true">4.</strong> Format</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/window-title.html"><strong aria-hidden="true">4.1.</strong> Window Title</a></li><li class="chapter-item expanded "><a href="wezterm/tab.html"><strong aria-hidden="true">4.2.</strong> Tab</a></li></ol></li><li class="chapter-item expanded "><a href="wezterm/status.html"><strong aria-hidden="true">5.</strong> Status Bar</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/left-status.html"><strong aria-hidden="true">5.1.</strong> Left Status</a></li><li class="chapter-item expanded "><a href="wezterm/right-status.html"><strong aria-hidden="true">5.2.</strong> Right Status</a></li></ol></li><li class="chapter-item expanded "><a href="wezterm/custom.html"><strong aria-hidden="true">6.</strong> Custom Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/toggle-font.html"><strong aria-hidden="true">6.1.</strong> Toggle Font</a></li><li class="chapter-item expanded "><a href="wezterm/dpi-detection.html"><strong aria-hidden="true">6.2.</strong> DPI detection</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Neovim</li><li class="chapter-item expanded affix "><li class="part-title">...To Be Continued</li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">WezTerm</li><li class="chapter-item expanded "><a href="wezterm/installation.html"><strong aria-hidden="true">2.</strong> installation</a></li><li class="chapter-item expanded "><a href="wezterm/base.html"><strong aria-hidden="true">3.</strong> Base Settings</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/window.html"><strong aria-hidden="true">3.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="wezterm/shell.html"><strong aria-hidden="true">3.2.</strong> Shell Prompt</a></li><li class="chapter-item expanded "><a href="wezterm/font.html"><strong aria-hidden="true">3.3.</strong> Font</a></li><li class="chapter-item expanded "><a href="wezterm/frame.html"><strong aria-hidden="true">3.4.</strong> Window Frame</a></li><li class="chapter-item expanded "><a href="wezterm/keybind.html"><strong aria-hidden="true">3.5.</strong> Key Binding</a></li><li class="chapter-item expanded "><a href="wezterm/leader.html"><strong aria-hidden="true">3.6.</strong> Leader Key</a></li></ol></li><li class="chapter-item expanded "><a href="wezterm/format.html"><strong aria-hidden="true">4.</strong> Format</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/window-title.html"><strong aria-hidden="true">4.1.</strong> Window Title</a></li><li class="chapter-item expanded "><a href="wezterm/tab.html"><strong aria-hidden="true">4.2.</strong> Tab</a></li></ol></li><li class="chapter-item expanded "><a href="wezterm/status.html"><strong aria-hidden="true">5.</strong> Status Bar</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/left-status.html"><strong aria-hidden="true">5.1.</strong> Left Status</a></li><li class="chapter-item expanded "><a href="wezterm/right-status.html"><strong aria-hidden="true">5.2.</strong> Right Status</a></li></ol></li><li class="chapter-item expanded "><a href="wezterm/custom.html"><strong aria-hidden="true">6.</strong> Custom Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/toggle-font.html"><strong aria-hidden="true">6.1.</strong> Toggle Font</a></li><li class="chapter-item expanded "><a href="wezterm/dpi-detection.html"><strong aria-hidden="true">6.2.</strong> DPI Detection</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Neovim</li><li class="chapter-item expanded affix "><li class="part-title">...To Be Continued</li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -1785,7 +1785,7 @@ end)
 <div class="footnote-definition" id="big"><sup class="footnote-definition-label">1</sup>
 <p>さらにフォントサイズを大きくして説明用に誇張しています。が、まだなんか中途半端でしたね。</p>
 </div>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="dpi-detection"><a class="header" href="#dpi-detection">dpi-detection</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="dpi-detection"><a class="header" href="#dpi-detection">DPI Detection</a></h1>
 <p>前回は手動でフォントサイズの切り替えを行いましたが、今回はこれを<code>dpi</code>の変更を検知して自動で切り替わるようにします。</p>
 <h2 id="まず前置き"><a class="header" href="#まず前置き">まず前置き</a></h2>
 <p>さて、これまでにも何度か出てきていた<code>wezterm.on</code>ですが、以下のような説明がありました。</p>
@@ -1836,6 +1836,13 @@ local DPI_CHANGE_FONT_SIZE = 10.0
 
 local prev_dpi = 0
 
+wezterm.on('trigger-dpi', function(window, dpi)
+  local overrides = window:get_config_overrides() or {}
+  overrides.font_size = dpi &gt;= DPI_CHANGE_NUM and DPI_CHANGE_FONT_SIZE or nil
+
+  window:set_config_overrides(overrides)
+end)
+
 wezterm.on('update-status', function(window, pane)
   local dpi = window:get_dimensions().dpi
 
@@ -1843,26 +1850,25 @@ wezterm.on('update-status', function(window, pane)
     return
   end
 
-  local overrides = window:get_config_overrides() or {}
-  overrides.font_size = dpi &gt;= DPI_CHANGE_NUM and DPI_CHANGE_FONT_SIZE or nil
-  window:set_config_overrides(overrides)
+  wezterm.emit('trigger-dpi', window, dpi)
 
   prev_dpi = dpi
 end)
 </code></pre>
 </div>
 </div>
-<p><code>dpi</code>と<code>font_size</code>周りの値はわたしの環境でぼや〜っと決め打ちにしてるので適宜調整してください。</p>
-<p>動作としては、<code>dpi</code>に変更があったらフォントサイズを切り替えるというものです。
-手動でやっていた処理とほぼ同じですね。</p>
+<p><code>dpi</code>と<code>font_size</code>周辺の値はわたしの環境にあわせてぼや〜っと決め打ちにしてるので適宜調整してください。</p>
+<p>動作としては、<code>dpi</code>に変更があったらカスタムイベントの<code>trigger-dpi</code>を呼んでフォントサイズを切り替えます。
+<code>trigger-dpi</code>自体は手動でフォントサイズを切り替える処理とほぼ同じですね。</p>
 <div id="admonition-info-1" class="admonition info">
 <div class="admonition-title">
 <p>Info</p>
 <p><a class="admonition-anchor-link" href="wezterm/dpi-detection.html#admonition-info-1"></a></p>
 </div>
 <div>
-<p>ほんとはカスタムイベントを使ってやりたいんですが、うまくいかない...。
-一旦これで。</p>
+<p>理由はちょっとよくわからなかったのですが、</p>
+<p>カスタムイベントに渡した<code>window</code>に対しての<code>get_config_overrides().dpi</code>が上手くいかなかったので、
+<code>wezterm.emit('trigger-dpi', window, dpi)</code>として<code>dpi</code>も渡しています。これであれば動くみたいです。</p>
 </div>
 </div>
 <div id="admonition-success" class="admonition success">
